--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,48 @@
 /* You can add global styles to this file, and also import other style files */
+//@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+//@import '~bootstrap/dist/css/bootstrap.min.css';
+
+body {
+  margin: 0;
+}
+
+.spacer {
+  flex-grow: 1;
+}
+
+
+.medium-list {
+  margin: auto;
+  width: 400px;
+  padding: 10px;
+}
+
+.list-viewer-wrapper {
+  border: 1px solid rgba(0, 0, 0, .03);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, .24), 0 0 2px rgba(0, 0, 0, .12);
+  margin: 4px;
+}
+
+.list-header-title {
+  color: rgba(0, 0, 0, .54);
+  background: rgb(63, 81, 181);
+  padding: 8px 20px;
+  font-weight: bold;
+  font-size: 19px;
+  color: #fffffc;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.divider {
+  margin-top: 10px !important;
+}
+
+.indexpage {
+  padding:10px 10px 0px 10px;
+}
+
