--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,10 @@
   <span style="flex-grow: 1"></span>
   <span *ngIf="!showLogoutButtons" class=" pointer" routerLink="/login">Login</span>
   <span *ngIf="!showLogoutButtons" class=" pointer" style="margin-right: 0px" routerLink="/register">Register</span>
-  <span *ngIf="showLogoutButtons" routerLink="/search" class="pointer">Search Book</span>
-  <span *ngIf="showLogoutButtons" routerLink="/account" class="pointer">View Account</span>
+  <span *ngIf="showLogoutButtons && userType=='USER'" routerLink="/search" class="pointer">Search Book</span>
+  <span *ngIf="showLogoutButtons && userType=='USER'" routerLink="/account" class="pointer">View Account</span>
+  <span *ngIf="showLogoutButtons && userType=='ADMIN'" routerLink="/addUser" class="pointer">Add User</span>
+  <span *ngIf="showLogoutButtons && userType=='ADMIN'" routerLink="/addBook" class="pointer">Add Book</span>
   <span *ngIf="showLogoutButtons" class="pointer" (click)="logout()" style="margin-right: 0px" >Logout</span>
 
 
