--- a/src/app/book-list/book-list.component.html
+++ b/src/app/book-list/book-list.component.html
@@ -1,9 +1,21 @@
-<mat-card>
-  <mat-card-title align="center">Account Details</mat-card-title>
-  <mat-card-content>
-    <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource">
+<mat-card style="height: 114px;text-align: center">
+  <mat-form-field  appearance="outline" style="width: 700px" align="center">
+    <input matInput type="text" placeholder="Search" (keyup.enter)="filterData(searchTerm)" [(ngModel)]="searchTerm" #searchBox>
+    <button mat-button *ngIf="searchBox.value" matSuffix mat-icon-button (click)="searchBox.value=''; filterData('')">
+      <mat-icon>close</mat-icon>
+    </button>
+  </mat-form-field>
+  <button mat-button mat-icon-button (click)="filterData(searchTerm)">
+    <mat-icon>search</mat-icon>
+  </button>
+</mat-card>
 
+<mat-card>
+  <mat-card-title align="center">Book Details</mat-card-title>
+  <mat-card-content >
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource" *ngIf="dataSource.filteredData.length">
+        <!-- Position Column -->
         <ng-container matColumnDef="sno">
           <th mat-header-cell *matHeaderCellDef> S. No. </th>
           <td mat-cell *matCellDef="let element;let i = index;"> {{dataSource.filteredData.indexOf(element) + 1}} </td>
@@ -15,40 +27,32 @@
           <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
 
-        <!-- Symbol Column -->
+        <!-- Weight Column -->
         <ng-container matColumnDef="author">
           <th mat-header-cell *matHeaderCellDef> Author </th>
           <td mat-cell *matCellDef="let element"> {{element.author}} </td>
         </ng-container>
 
-
-        <!-- Weight Column -->
+        <!-- Symbol Column -->
         <ng-container matColumnDef="publication">
           <th mat-header-cell *matHeaderCellDef> Publication </th>
           <td mat-cell *matCellDef="let element"> {{element.publication}} </td>
         </ng-container>
 
-
-
         <ng-container matColumnDef="yearOfPublication">
-          <th mat-header-cell *matHeaderCellDef> Year Of Publication </th>
+          <th mat-header-cell *matHeaderCellDef> Publication Date </th>
           <td mat-cell *matCellDef="let element"> {{element.published_year}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="issue_date">
-          <th mat-header-cell *matHeaderCellDef> Issue Date </th>
-          <td mat-cell *matCellDef="let element"> {{element.issueDate}} </td>
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef> Status </th>
+          <td mat-cell *matCellDef="let element"> {{element.status}} </td>
         </ng-container>
-
-        <ng-container matColumnDef="return_date">
-          <th mat-header-cell *matHeaderCellDef> Return Date </th>
-          <td mat-cell *matCellDef="let element"> {{element.returnDate}} </td>
-        </ng-container>
-
         <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef> Action </th>
+          <th mat-header-cell *matHeaderCellDef style="width:230px;padding-left:15px"> Action </th>
           <td mat-cell *matCellDef="let element">
-            <button   mat-flat-button color="primary" (click)="returnBook(element)">Return</button>
+            <button  mat-raised-button color="primary"  [routerLink]="['/addBook', element.id]"  style="margin-right: 10px">Update</button>
+            <button  mat-raised-button color="warn" (click)="deleteBook(element.id)">Delete</button>
           </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -57,7 +61,5 @@
       <p *ngIf="!dataSource.filteredData.length" style="padding: 20px;font-size: 20px;word-spacing: 8px;font-family: cursive;text-align: center"> No Books Available</p>
       <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     </div>
-
-
   </mat-card-content>
 </mat-card>
