--- a/src/app/forgotpassword/forgotpassword.component.html
+++ b/src/app/forgotpassword/forgotpassword.component.html
@@ -1,7 +1,8 @@
-<h2 mat-dialog-title>Reset Password</h2>
+<div style="width:312px;height: 158px" class="forgot-password-dialog">
+<div mat-dialog-title>Reset Password</div>
 
 <mat-dialog-content [formGroup]="forgotPasswordForm">
-  <div class="example-container">
+  <div>
 
     <mat-form-field>
       <input matNativeControl
@@ -13,6 +14,7 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button class="mat-raised-button mat-primary"(click)="reset()">Reset</button>
+  <button class="mat-raised-button mat-primary"(click)="reset()" [disabled]="!forgotPasswordForm.valid">Reset</button>
   <button class="mat-raised-button"(click)="close()">Cancel</button>
 </mat-dialog-actions>
+</div>
