--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -50,8 +50,8 @@
         </ng-container>
 
         <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef> Borrow </th>
-          <td mat-cell *matCellDef="let element"> <button  mat-raised-button (click)="borrowBook(element.id)" [disabled]="element.status !== 'AVAILABLE'" color="accent">Borrow</button> </td>
+          <th mat-header-cell *matHeaderCellDef> Action </th>
+          <td mat-cell *matCellDef="let element"> <button  mat-raised-button (click)="borrowBook(element.id)" [disabled]="element.status === 'UNAVAILABLE'" color="primary">Borrow</button> </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
