--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -62,7 +62,7 @@
           </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-row (click)="openUserBookDialog(row.userId)" *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
       <p *ngIf="!dataSource.filteredData.length" style="padding: 20px;font-size: 20px;word-spacing: 8px;font-family: cursive;text-align: center"> No Users Available</p>
       <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
